Opened 10 years ago

Closed 10 years ago

#11350 closed bug (fixed)

rare http request crash in BNetBuffer::AppendData()

Reported by: ttcoder Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Network Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

From dsuden, in circa r 47990, NULL dereference within this path:

0x79ae2530	0xfd41dc	BHttpRequest::_MakeRequest() + 0x334 
0x79ae2610	0xfd38ef	BHttpRequest::_ProtocolLoop() + 0x1d7 
0x79ae2650	0xfde4b8	BUrlRequest::_ThreadEntry(void*) + 0x40 

Didn't happen again, and never saw that myself, might well be just a freak occurence.

Attachments (1)

bnetbuffer_crash.txt (23.7 KB ) - added by ttcoder 10 years ago.
null pointer in BNetBuffer::AppendData()

Download all attachments as: .zip

Change History (2)

by ttcoder, 10 years ago

Attachment: bnetbuffer_crash.txt added

null pointer in BNetBuffer::AppendData()

comment:1 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Tentative fix in hrev48033. Hard to tell if that's the right fix without a way to reproduce the problem.

Note: See TracTickets for help on using tickets.